--- a/Coinify/src/client side/components/Footer/Footer.css
+++ b/Coinify/src/client side/components/Footer/Footer.css
@@ -4,7 +4,6 @@
 .contact 
 {
 	position: relative;
-	padding: 50px 100px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -46,7 +45,6 @@
 .container .contactInfo .box 
 {
 	position: relative;
-	padding: 20px 0;
 	display: flex;
 	cursor: pointer;
 }
@@ -56,8 +54,7 @@
 {
 	display: flex;
 	flex-direction: column;
-	margin-left: 20px;
-	font-size: 1.1em;
+	margin-right: 12rem;
 	color: #AA9A49;
 	font-weight: 300;
 }
@@ -98,7 +95,7 @@
 	font-size: 1.7em;
 	color: #AA9A49;
 	align-items: center;
-   display: flex;
+    display: flex;
 	justify-content: center;
 	width: 100%;
 	border-radius: 33px;
