--- a/Coinify/src/client side/pages/RegisterPage/Registerpage.css
+++ b/Coinify/src/client side/pages/RegisterPage/Registerpage.css
@@ -1,169 +1,166 @@
-
 :root {
-    --primary-color: #333333;
-    --secondary-color: #333333;
-    --black: #333333;
-    --white: #AA9A49;
-    --gray: #efefef;
-    --gray-2: #757575;
+  --primary-color: #333333;
+  --secondary-color: #333333;
+  --black: #333333;
+  --white: #aa9a49;
+  --gray: #efefef;
+  --gray-2: #757575;
 }
 
 .Signin-Signup {
-    position: relative;
-    min-height: 100vh;
-    overflow: hidden;
+  position: relative;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
 .row {
-    display: flex;
-    flex-wrap: wrap;
-    height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  height: 100vh;
 }
 
 .col {
-    width: 50%;
+  width: 50%;
 }
 
 .align-items-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .form-wrapper {
-    width: 100%;
-    max-width: 28rem;
+  width: 100%;
+  max-width: 28rem;
 }
 
 .form {
-    padding: 1rem;
-    background-color:
-        var(--white);
-    border-radius: 1.5rem;
-    width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    transform: scale(0);
-    transition: .5s ease-in-out;
-    transition-delay: 1s;
+  padding: 1rem;
+  background-color: var(--white);
+  border-radius: 1.5rem;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transform: scale(0);
+  transition: 0.5s ease-in-out;
+  transition-delay: 1s;
 }
 
 .input-group {
-    position: relative;
-    width: 100%;
-    margin: 1rem 0;
+  position: relative;
+  width: 100%;
+  margin: 1rem 0;
 }
 
 .input-group i {
-    position: absolute;
-    top: 50%;
-    left: 1rem;
-    transform: translateY(-50%);
-    font-size: 1.4rem;
-    color: var(--gray-2);
+  position: absolute;
+  top: 50%;
+  left: 1rem;
+  transform: translateY(-50%);
+  font-size: 1.4rem;
+  color: var(--gray-2);
 }
 
 .input-group input {
-    width: 77%;
-    padding: 1rem 3rem;
-    font-size: 1rem;
-    background-color: var(--gray);
-    border-radius: .5rem;
-    border: 0.125rem solid var(--white);
-    outline: none;
+  width: 77%;
+  padding: 1rem 3rem;
+  font-size: 1rem;
+  background-color: var(--gray);
+  border-radius: 0.5rem;
+  border: 0.125rem solid var(--white);
+  outline: none;
 }
 
 .input-group input:focus {
-    border: 0.125rem solid var(--primary-color);
+  border: 0.125rem solid var(--primary-color);
 }
 
 .form button {
-    cursor: pointer;
-    width: 100%;
-    border: none;
-    padding: .6rem 0;
-    border-radius: .5rem;
-    background-color:
-        var(--primary-color);
-    color: var(--white);
-    font-size: 1.2rem;
-    outline: none;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  padding: 0.6rem 0;
+  border-radius: 0.5rem;
+  background-color: var(--primary-color);
+  color: var(--white);
+  font-size: 1.2rem;
+  outline: none;
 }
 
 .form p {
-    margin: 1rem 0;
-    font-size: .7rem;
+  margin: 1rem 0;
+  font-size: 0.7rem;
 }
 
 .flex-col {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .social-list {
-    margin: 2rem 0;
-    padding: 1rem;
-    border-radius: 1.5rem;
-    width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    transform: scale(0);
-    transition: .5s ease-in-out;
-    transition-delay: 1.2s;
+  margin: 2rem 0;
+  padding: 1rem;
+  border-radius: 1.5rem;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transform: scale(0);
+  transition: 0.5s ease-in-out;
+  transition-delay: 1.2s;
 }
 
-.social-list>div {
-    color: var(--white);
-    margin: 0 .5rem;
-    padding: .7rem;
-    cursor: pointer;
-    border-radius: .5rem;
-    cursor: pointer;
-    transform: scale(0);
-    transition: .5s ease-in-out;
+.social-list > div {
+  color: var(--white);
+  margin: 0 0.5rem;
+  padding: 0.7rem;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transform: scale(0);
+  transition: 0.5s ease-in-out;
 }
 
-.social-list>div:nth-child(1) {
-    transition-delay: 1.4s;
+.social-list > div:nth-child(1) {
+  transition-delay: 1.4s;
 }
 
-.social-list>div:nth-child(2) {
-    transition-delay: 1.6s;
+.social-list > div:nth-child(2) {
+  transition-delay: 1.6s;
 }
 
-.social-list>div:nth-child(3) {
-    transition-delay: 1.8s;
+.social-list > div:nth-child(3) {
+  transition-delay: 1.8s;
 }
 
-.social-list>div:nth-child(4) {
-    transition-delay: 2s;
+.social-list > div:nth-child(4) {
+  transition-delay: 2s;
 }
 
-.social-list>div>i {
-    font-size: 1.5rem;
-    transition: .4s ease-in-out;
+.social-list > div > i {
+  font-size: 1.5rem;
+  transition: 0.4s ease-in-out;
 }
 
-.social-list>div:hover i {
-    transform: scale(1.5);
+.social-list > div:hover i {
+  transform: scale(1.5);
 }
 
 .facebook-bg {
-    background-color: var(--facebook-color);
+  background-color: var(--facebook-color);
 }
 
 .google-bg {
-    background-color: var(--google-color);
+  background-color: var(--google-color);
 }
 
 .twitter-bg {
-    background-color: var(--twitter-color);
+  background-color: var(--twitter-color);
 }
 
 .insta-bg {
-    background-color: var(--insta-color);
+  background-color: var(--insta-color);
 }
 
 .pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .Signin-Signup.sign-in .sign-in .form,
@@ -176,48 +173,48 @@
 }
 
 .content-row {
-    position: absolute;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    z-index: 6;
-    width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 6;
+  width: 100%;
 }
 
 .text {
-    margin: 4rem;
-    color: var(--white);
+  margin: 4rem;
+  color: var(--white);
 }
 
 .text h2 {
-    font-size: 3.5rem;
-    font-weight: 800;
-    margin: 2rem 0;
-    transition: 1s ease-in-out;
+  font-size: 3.5rem;
+  font-weight: 800;
+  margin: 2rem 0;
+  transition: 1s ease-in-out;
 }
 
 .text p {
-    font-weight: 600;
-    transition: 1s ease-in-out;
-    transition-delay: .2s;
+  font-weight: 600;
+  transition: 1s ease-in-out;
+  transition-delay: 0.2s;
 }
 
 .img img {
-    width: 30vw;
-    transition: 1s ease-in-out;
-    transition-delay: .4s;
+  width: 30vw;
+  transition: 1s ease-in-out;
+  transition-delay: 0.4s;
 }
 
 .text.sign-in h2,
 .text.sign-in p,
 .img.sign-in img {
-    transform: translateX(-250%);
+  transform: translateX(-250%);
 }
 
 .text.sign-up h2,
 .text.sign-up p,
 .img.sign-up img {
-    transform: translateX(250%);
+  transform: translateX(250%);
 }
 
 .Signin-Signup.sign-in .text.sign-in h2,
@@ -226,107 +223,106 @@
 .Signin-Signup.sign-up .text.sign-up h2,
 .Signin-Signup.sign-up .text.sign-up p,
 .Signin-Signup.sign-up .img.sign-up img {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 /* BACKGROUND */
 
 .Signin-Signup::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 300vw;
-    transform: translate(35%, 0);
-    background-image: linear-gradient(-45deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-    transition: 1s ease-in-out;
-    z-index: 6;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border-bottom-right-radius: max(50vw, 50vh);
-    border-top-left-radius: max(50vw, 50vh);
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 300vw;
+  transform: translate(35%, 0);
+  background-image: linear-gradient(
+    -45deg,
+    var(--primary-color) 0%,
+    var(--secondary-color) 100%
+  );
+  transition: 1s ease-in-out;
+  z-index: 6;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-bottom-right-radius: max(50vw, 50vh);
+  border-top-left-radius: max(50vw, 50vh);
 }
 
 .Signin-Signup.sign-in::before {
-    transform: translate(0, 0);
-    right: 50%;
+  transform: translate(0, 0);
+  right: 50%;
 }
 
 .Signin-Signup.sign-up::before {
-    transform: translate(100%, 0);
-    right: 50%;
+  transform: translate(100%, 0);
+  right: 50%;
 }
 
 /* RESPONSIVE */
 
 @media only screen and (max-width: 425px) {
+  .Signin-Signup::before,
+  .Signin-Signup.sign-in::before,
+  .Signin-Signup.sign-up::before {
+    height: 100vh;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 0;
+    z-index: 0;
+    transform: none;
+    right: 0;
+  }
 
-    .Signin-Signup::before,
-    .Signin-Signup.sign-in::before,
-    .Signin-Signup.sign-up::before {
-        height: 100vh;
-        border-bottom-right-radius: 0;
-        border-top-left-radius: 0;
-        z-index: 0;
-        transform: none;
-        right: 0;
-    }
-
-    /* .container.sign-in .col.sign-up {
+  /* .container.sign-in .col.sign-up {
 transform: translateY(100%);
 } */
 
-    .Signin-Signup.sign-in .col.sign-in,
-    .Signin-Signup.sign-up .col.sign-up {
-        transform: translateY(0);
-    }
+  .Signin-Signup.sign-in .col.sign-in,
+  .Signin-Signup.sign-up .col.sign-up {
+    transform: translateY(0);
+  }
 
-    .content-row {
-        align-items: flex-start !important;
-    }
+  .content-row {
+    align-items: flex-start !important;
+  }
 
-    .content-row .col {
-        transform: translateY(0);
-        background-color: unset;
-    }
+  .content-row .col {
+    transform: translateY(0);
+    background-color: unset;
+  }
 
-    .col {
-        width: 100%;
-        position: absolute;
-        padding: 2rem;
-        background-color: var(--white);
-        border-top-left-radius: 2rem;
-        border-top-right-radius: 2rem;
-        transform: translateY(100%);
-        transition: 1s ease-in-out;
-    }
+  .col {
+    width: 100%;
+    position: absolute;
+    padding: 2rem;
+    background-color: var(--white);
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+    transform: translateY(100%);
+    transition: 1s ease-in-out;
+  }
 
-    .row {
-        align-items: flex-end;
-        justify-content: flex-end;
-    }
+  .row {
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
 
-    .form,
-    .social-list {
-        box-shadow: none;
-        margin: 0;
-        padding: 0;
-    }
+  .form,
+  .social-list {
+    box-shadow: none;
+    margin: 0;
+    padding: 0;
+  }
 
-    .text {
-        margin: 0;
-    }
+  .text {
+    margin: 0;
+  }
 
-    .text p {
-        display: none;
-    }
+  .text p {
+    display: none;
+  }
 
-    .text h2 {
-        margin: .5rem;
-        font-size: 2rem;
-    }
+  .text h2 {
+    margin: 0.5rem;
+    font-size: 2rem;
+  }
 }
-
-
-
-
