--- a/Coinify/src/client side/pages/RegisterPage/Registerpage.css
+++ b/Coinify/src/client side/pages/RegisterPage/Registerpage.css
@@ -29,14 +29,13 @@
   justify-content: center;
   text-align: center;
 }
-
 .form-wrapper {
   width: 100%;
-  max-width: 28rem;
+  max-width: 36rem; /* Increase the max-width value */
 }
 
 .form {
-  padding: 1rem;
+  padding: 1.5rem; /* Increase the padding value */
   background-color: var(--white);
   border-radius: 1.5rem;
   width: 100%;
@@ -44,26 +43,38 @@
   transform: scale(0);
   transition: 0.5s ease-in-out;
   transition-delay: 1s;
+  margin-bottom: 6rem;
 }
 
 .input-group {
   position: relative;
   width: 100%;
-  margin: 1rem 0;
+  margin: 1.5rem 0; /* Increase the margin value */
+  display: flex;
+  gap: 2rem;
+  
+}
+.input-icon {
+  margin-left: 1rem; 
+  margin-top: 1.22rem;
+  font-size: 20px;
+  color: #333333;
+  position: absolute;
 }
 
 .input-group i {
   position: absolute;
   top: 50%;
-  left: 1rem;
+  left: 1.5rem; /* Increase the left value */
   transform: translateY(-50%);
   font-size: 1.4rem;
   color: var(--gray-2);
+  
 }
 
 .input-group input {
-  width: 77%;
-  padding: 1rem 3rem;
+  width: 80%; /* Increase the width value */
+  padding: 1.2rem 3rem; /* Increase the padding value */
   font-size: 1rem;
   background-color: var(--gray);
   border-radius: 0.5rem;
@@ -79,7 +90,7 @@
   cursor: pointer;
   width: 100%;
   border: none;
-  padding: 0.6rem 0;
+  padding: 0.8rem 0; /* Increase the padding value */
   border-radius: 0.5rem;
   background-color: var(--primary-color);
   color: var(--white);
@@ -88,76 +99,18 @@
 }
 
 .form p {
-  margin: 1rem 0;
+  margin: 1.5rem 0; /* Increase the margin value */
   font-size: 0.7rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .flex-col {
   flex-direction: column;
 }
 
-.social-list {
-  margin: 2rem 0;
-  padding: 1rem;
-  border-radius: 1.5rem;
-  width: 100%;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  transform: scale(0);
-  transition: 0.5s ease-in-out;
-  transition-delay: 1.2s;
-}
-
-.social-list > div {
-  color: var(--white);
-  margin: 0 0.5rem;
-  padding: 0.7rem;
-  cursor: pointer;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  transform: scale(0);
-  transition: 0.5s ease-in-out;
-}
-
-.social-list > div:nth-child(1) {
-  transition-delay: 1.4s;
-}
-
-.social-list > div:nth-child(2) {
-  transition-delay: 1.6s;
-}
-
-.social-list > div:nth-child(3) {
-  transition-delay: 1.8s;
-}
-
-.social-list > div:nth-child(4) {
-  transition-delay: 2s;
-}
-
-.social-list > div > i {
-  font-size: 1.5rem;
-  transition: 0.4s ease-in-out;
-}
-
-.social-list > div:hover i {
-  transform: scale(1.5);
-}
-
-.facebook-bg {
-  background-color: var(--facebook-color);
-}
-
-.google-bg {
-  background-color: var(--google-color);
-}
-
-.twitter-bg {
-  background-color: var(--twitter-color);
-}
-
-.insta-bg {
-  background-color: var(--insta-color);
-}
 
 .pointer {
   cursor: pointer;
@@ -197,6 +150,9 @@
   font-weight: 600;
   transition: 1s ease-in-out;
   transition-delay: 0.2s;
+}
+.rememberMe {
+   font-size: 0.7rem;
 }
 
 .img img {
@@ -260,27 +216,30 @@
 
 /* RESPONSIVE */
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 960px) {
   .Signin-Signup::before,
   .Signin-Signup.sign-in::before,
   .Signin-Signup.sign-up::before {
-    height: 100vh;
-    border-bottom-right-radius: 0;
-    border-top-left-radius: 0;
-    z-index: 0;
-    transform: none;
-    right: 0;
+  display: none;
   }
 
-  /* .container.sign-in .col.sign-up {
-transform: translateY(100%);
-} */
+  .Signin-Signup.sign-in .col.sign-in
+   {
+    transform: translateY(0);
+    margin-right: 0.5rem;
+    margin-bottom: 8rem;
+  }
 
-  .Signin-Signup.sign-in .col.sign-in,
   .Signin-Signup.sign-up .col.sign-up {
     transform: translateY(0);
+    margin-right: 0.5rem;
+    margin-top: 10rem;
+    width: 80%;
+    
   }
-
+  .text {
+    display: none;
+  }
   .content-row {
     align-items: flex-start !important;
   }
@@ -289,16 +248,16 @@ transform: translateY(100%);
     transform: translateY(0);
     background-color: unset;
   }
+  
 
   .col {
-    width: 100%;
+    width: 80%;
     position: absolute;
     padding: 2rem;
     background-color: var(--white);
-    border-top-left-radius: 2rem;
-    border-top-right-radius: 2rem;
+    border-radius: 2rem;
     transform: translateY(100%);
-    transition: 1s ease-in-out;
+   
   }
 
   .row {
@@ -306,8 +265,7 @@ transform: translateY(100%);
     justify-content: flex-end;
   }
 
-  .form,
-  .social-list {
+  .form{
     box-shadow: none;
     margin: 0;
     padding: 0;
@@ -322,7 +280,7 @@ transform: translateY(100%);
   }
 
   .text h2 {
-    margin: 0.5rem;
+    margin: 1.5rem;
     font-size: 2rem;
   }
 }
