--- a/Coinify/src/client side/components/Form/TForm.css
+++ b/Coinify/src/client side/components/Form/TForm.css
@@ -1,9 +1,9 @@
 .table {
-   border-radius: 33px;
-   border: #AA9A49 solid 3px;
+  border-radius: 33px;
+  border: #aa9a49 solid 3px;
 }
 
 .Headers {
-  font-weight:bolder;
-  background-color: #F0E3E3;
+  font-weight: bolder;
+  background-color: #f0e3e3;
 }
