--- a/Coinify/src/index.css
+++ b/Coinify/src/index.css
@@ -1,6 +1,6 @@
 body {
-    font-family: 'Poppins';
-    margin: 0;
-    padding: 0;
-    background-color:#FCFAF9;
+  font-family: "Poppins";
+  margin: 0;
+  padding: 0;
+  background-color: #fcfaf9;
 }
