--- a/Coinify/src/App.css
+++ b/Coinify/src/App.css
@@ -19,13 +19,13 @@ body {
 }
 .grid-container {
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  gap: 3rem;
 }
 .grid-row {
   display: flex;
-  gap: 50px;
   margin-bottom: 10px;
+  margin-top: 2rem;
+  gap: 3rem;
 }
 .grid-item:hover {
   transform: scale(1.05);
