--- a/Coinify/src/admin side/Pages/adminHomePage/adminHomePage.css
+++ b/Coinify/src/admin side/Pages/adminHomePage/adminHomePage.css
@@ -7,6 +7,7 @@
   width: 85%;
   display: flex;
   flex-direction: column;
+  margin-left: 5.5rem;
 }
 
 .adminHomeCards {
@@ -19,5 +20,11 @@
 .graph {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: #aa9a4967;
   margin-top: 50px;
+}
+.MiddleHeader {
+ position: absolute;
 }
