--- a/Coinify/src/client side/components/home/userheader/userHeader.css
+++ b/Coinify/src/client side/components/home/userheader/userHeader.css
@@ -18,6 +18,7 @@
     justify-content: space-between;
     color: #aa9a49;
     border-bottom: solid black 1.5px;
+    text-transform: uppercase;
 }
 .homelogopage {
     height: 40px;
@@ -33,5 +34,6 @@
     color: #aa9a49;
 }
 .homepagedescription p {
-    font-size: 20px;
+    font-size: 22px;
+    font-weight: bold;
 }
