--- a/Coinify/src/client side/components/home/userheader/userHeader.css
+++ b/Coinify/src/client side/components/home/userheader/userHeader.css
@@ -30,7 +30,8 @@
     align-items:center;
     gap: 20px;
     margin-top: 20px;
-    width: 90%;
+    width: 50%;
+    margin-right: 45rem;
     color: #aa9a49;
 }
 .homepagedescription p {
