--- a/Coinify/src/client side/components/AddPromotion-Form/Promotion-Form.css
+++ b/Coinify/src/client side/components/AddPromotion-Form/Promotion-Form.css
@@ -151,6 +151,16 @@ padding: 1rem;
     padding: 1rem;
 }
 
+.promo {
+border-radius: 33px !important;
+}
+
+.percentage {
+  border-radius: 33px !important;
+}
+
+
+
 
 
 
