--- a/Coinify/src/admin side/components/MerchantSideNavbar/MerchantSideNavbar.css
+++ b/Coinify/src/admin side/components/MerchantSideNavbar/MerchantSideNavbar.css
@@ -18,7 +18,15 @@
   .adminsidenavbar {
     height: 100vh;
     background-color: #333333;
-}
+    position: sticky;
+    top: 0;
+  }
+  
+  .closed-sidenavbar {
+    width: 20%;
+    position: sticky;
+    top: 0;
+  }
 
   .interdiv {
     display: flex;
@@ -100,10 +108,6 @@
     background-color: #aa9a49;
   }
   
-  .closed-sidenavbar {
-    width: 20%;
-  
-  }
   
   .interdivClosed {
     display: flex;
