--- a/Coinify/src/admin side/Pages/adminUsersPage/adminUsersPage.css
+++ b/Coinify/src/admin side/Pages/adminUsersPage/adminUsersPage.css
@@ -3,7 +3,24 @@
 }
 
 .AdminUsersPageContent {
-  width: 85%;
+  width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.adduseradminpage1 {
+  position: absolute;
+  z-index: 200;
+   right: 0;
+  top: 0;
+  margin-top: 130px;
+  margin-right: 50px;
+   height: 40px;
+   width: 100px;
+   cursor: pointer;
+   border-radius: 20px;
+}
+.adduseradminpage1:hover {
+  background-color: #aa9a49;
+  color: white;
 }
