--- a/Coinify/src/admin side/components/UserForm/usersFrom.css
+++ b/Coinify/src/admin side/components/UserForm/usersFrom.css
@@ -24,6 +24,36 @@
   align-items: center;
   justify-content: center;
 }
+/* .adduseradminpage{
+  margin-left: 30px;
+
+} */
+.adduseradminpage {
+  height: 40px;
+  margin-right: 250px;
+  width: 100px;
+  cursor: pointer;
+  border-radius: 20px;
+  position: absolute;
+  right: 0;
+
+  
+}
+
+
+.adduseradminpage:hover {
+  background-color: #aa9a49;
+  color: white;
+}
+
+
+
+
+
+
+
+
+
 
 .input-group-admin-user {
   position: relative;
