userpromotionpage not finalized

--- a/Coinify/src/client side/pages/User/userpromotionpage/userpromotionpage.css
+++ b/Coinify/src/client side/pages/User/userpromotionpage/userpromotionpage.css
@@ -1,7 +1,7 @@
 .userpromotionpage {
     display: flex;
 }
-.userrightside {
+.userrightside2 {
     display: flex;
  flex-direction: column;
  width: 100%;
