--- a/Coinify/src/admin side/Pages/adminPromotionsPage/adminPromotionsPage.css
+++ b/Coinify/src/admin side/Pages/adminPromotionsPage/adminPromotionsPage.css
@@ -3,7 +3,8 @@
 }
 
 .AdminPromotionsPageContent {
-  width: 85%;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
