--- a/Coinify/src/admin side/Pages/adminHomePage/adminHomePage.css
+++ b/Coinify/src/admin side/Pages/adminHomePage/adminHomePage.css
@@ -4,10 +4,10 @@
 }
 
 .adminHomePageContent {
-  width: 85%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  margin-left: 5.5rem;
+  /* margin-left: 5.5rem; */
 }
 
 .adminHomeCards {
