--- a/Coinify/src/admin side/Pages/adminHomePage/adminHomePage.css
+++ b/Coinify/src/admin side/Pages/adminHomePage/adminHomePage.css
@@ -1,20 +1,18 @@
 .adminHomePage {
   display: flex;
-  width: 100%;
 }
 
 .adminHomePageContent {
-  width: 85%;
   display: flex;
   flex-direction: column;
-  margin-left: 5.5rem;
+  width: 100%;
 }
 
 .adminHomeCards {
   display: flex;
-  justify-content: space-around;
-  margin-top: 25px;
-  min-width: fit-content;
+  gap: 5rem;
+  margin-top: 2rem;
+  margin-left: 9rem;
 }
 
 .graph {
@@ -26,5 +24,5 @@
   margin-top: 50px;
 }
 .MiddleHeader {
- position: absolute;
+  position: absolute;
 }
