--- a/Coinify/src/admin side/Pages/adminUsersPage/adminUsersPage.css
+++ b/Coinify/src/admin side/Pages/adminUsersPage/adminUsersPage.css
@@ -3,7 +3,13 @@
 }
 
 .AdminUsersPageContent {
-  width: 85%;
   display: flex;
   flex-direction: column;
+  width: 100%;
+ 
+}
+.useradminForm {
+margin-top: 2rem;
+margin-left: 3rem;
+margin-right: 3rem;
 }
