--- a/Coinify/src/client side/pages/User/UserHomePage/userHomePage.css
+++ b/Coinify/src/client side/pages/User/UserHomePage/userHomePage.css
@@ -3,12 +3,6 @@
   display: flex;
   flex-direction: row;
 }
-/* .homepagecontent {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  align-items: center;
-} */
 .homecontent {
   width: 100%;
   display: flex;
@@ -18,10 +12,10 @@
 .grid-container {
   display: flex;
   gap: 4rem;
-  /* justify-content: center;
-  flex-wrap: wrap; */
-  /* margin-top: 2rem; */
-  margin-left: 10rem;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+  margin-left: 8rem;
 }
 .grid-row {
   display: flex;
@@ -29,32 +23,6 @@
   margin-top: 2rem;
   gap: 3rem;
 }
-.grid-item:hover {
-  transform: scale(1.05);
-  cursor: pointer;
-}
-.tableuserinfo {
-  width: 80%;
-  border-collapse: collapse;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease-in-out;
-  margin-left: 9rem;
-}
-
-
-.tduserinfo {
-  padding: 10px;
-}
-.tduserinfo1 {
-  border-left: 1px solid #aa9a49;
-}
-td {
-  padding: 15px 10px;
-}
-
-
 
 
 
