--- a/Coinify/src/client side/pages/User/userpromotionpage/userpromotionpage.css
+++ b/Coinify/src/client side/pages/User/userpromotionpage/userpromotionpage.css
@@ -1,11 +1,19 @@
 .userpromotionpage {
     display: flex;
+    margin: 0;
+    padding: 0;
 }
 .userrightside {
     display: flex;
  flex-direction: column;
  width: 100%;
 }
-.userpromotion {
+.MerchantTabel {
+width: 100%;
+margin-bottom: 20rem;
     
 }
+.UserMerchantPage {
+ display: flex;
+}
+
