--- a/Coinify/src/client side/components/buyusdtform/buyusdtform.css
+++ b/Coinify/src/client side/components/buyusdtform/buyusdtform.css
@@ -4,7 +4,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 600px;
-    height: 400px;
+    height: 550px;
     border: solid #aa9a49 3px;
     background-color: #333333;
     border-radius: 25px;
@@ -13,7 +13,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-left: 300px;
 }
+
 .overlay {
     position: fixed;
     top: 0;
@@ -29,6 +31,7 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
+    
 }
 .inputmoneybuy {
     width: 280px;
@@ -37,8 +40,24 @@
     border: #aa9a49;
     border-radius: 20px;
 }
+.inputmoneybuy1{
+    width: 280px;
+    height: 40px;
+    padding-left: 35px;
+    border: #aa9a49;
+    border-radius: 20px;
+    margin-right: 50px;
+}
+.inputmoneybuy2{
+    width: 280px;
+    height: 40px;
+    padding-left: 35px;
+    border: #aa9a49;
+    border-radius: 20px;
+    margin-right: 80px;
+}
 .amount {
-    margin-left: 120px;
+    margin-right: 10px;
 }
 .hrbuymoneyform {
     width: 90%;
@@ -57,21 +76,22 @@
     color: #333333;
     background-color: #aa9a49;
     border-radius: 20px;
+    margin-top: 20px;
 }
 .buymmoneybuttondiv {
     display: flex;
     justify-content: center;
     margin-top: 50px;
 }
-.inputmoneyicon {
+.inputmoneyicon1 {
     position: absolute;
-    margin-right: 190px;
+    margin-right: 270px;
     height: 25px;
     width: 25px;
 }
 .inputemailicon {
     position: absolute;
-    margin-right: 70px;
+    margin-right: 170px;
     height: 25px;
     width: 25px;
 }
