--- a/Coinify/src/client side/components/home/userheader/userHeader.css
+++ b/Coinify/src/client side/components/home/userheader/userHeader.css
@@ -57,8 +57,8 @@
   display: noe;
 }
 
-.notificationDivP {
-  position: relative;
+.notificationDiv{
+  margin-right: 50px;
 }
 .notificationlogo {
   position: absolute;
