--- a/Coinify/src/client side/pages/Merchant/merchantpormotionspage/merchantpormotionspage.css
+++ b/Coinify/src/client side/pages/Merchant/merchantpormotionspage/merchantpormotionspage.css
@@ -6,7 +6,7 @@
   width: 100%;
 }
 
-.addbutton {
+.addbuttonmechant {
   height: 40px;
   width: 120px;
   cursor: pointer;
@@ -14,7 +14,7 @@
   position: absolute;
   z-index: 143;
 }
-.addbutton:hover {
+.addbuttonmechant:hover {
   background-color: #aa9a49;
   color: white;
 }
@@ -25,4 +25,6 @@
   margin-right: 180px;
   display: flex;
 }
-
+.promtable {
+  width: 95%;
+}
