--- a/Coinify/src/admin side/Pages/adminPromotionsPage/adminPromotionsPage.css
+++ b/Coinify/src/admin side/Pages/adminPromotionsPage/adminPromotionsPage.css
@@ -15,6 +15,10 @@
   border-radius: 33px;
   position: absolute;
   z-index: 143;
+  border-style: none;
+  background-color: #333333;
+  border-radius: 33px;
+  color: #aa9a49;
 }
 .addbuttonadmin:hover {
   background-color: #aa9a49;
