--- a/Coinify/src/client side/pages/Merchant/merchantpormotionspage/merchantpormotionspage.css
+++ b/Coinify/src/client side/pages/Merchant/merchantpormotionspage/merchantpormotionspage.css
@@ -13,6 +13,10 @@
   border-radius: 33px;
   position: absolute;
   z-index: 143;
+  border-style: none;
+  background-color: #333333;
+  border-radius: 33px;
+  color: #aa9a49;
 }
 .addbuttonmechant:hover {
   background-color: #aa9a49;
